--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <label for="s12">초코 케잌</label>
                 </input>
             </div>
-            <!-- <div class="q5">
+            <div class="q5">
                 <p>
                     5. 친한 친구와 분식집에 왔습니다. 오늘 점심으로는 라면이 땡기네요. 어떤 라면을 드시겠습니까?
                 </p>
@@ -292,7 +292,7 @@
                 <input type="checkbox" id="s60" name="q20" value="24" onclick='checkOnlyOne(this)'>
                 <label for="s60">파스타 & 피자</label>
                 </input>
-            </div> -->
+            </div>
         </div>
         <span class="jocoding">제작도움: <a class="red" href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg">조코딩 유튜브</a> </span>  
         <div class="submit"><button class="submit" onclick="onSubmitClick()">결과보기</button></div>
