--- a/result.html
+++ b/result.html
@@ -4,11 +4,6 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>결과 확인 | FLTI</title>
-        <script
-            src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"
-        ></script>
         <link rel="stylesheet" href="css/result.css" />
     </head>
     <body>
@@ -17,7 +12,21 @@
         </div>
         <div class="resultDiv">
             당신은 <span id="result"></span>입니다.
-            <span id="resultDesc"></span>
+            <div id="resultDesc"></div>
+        </div>
+        <div>
+            <div class="submit">
+                <button class="submit" onclick="onShareClick()">
+                    공유하기
+                </button>
+            </div>
+        </div>
+        <div class="shareBtn">
+            <div class="share">
+                <button class="submit" onclick="onSubmitClick()">
+                    테스트하기
+                </button>
+            </div>
         </div>
     </body>
 
