Kakao Adfit Updated

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         <div class="nav">
             <img class="navImg" src="img/Navigation_Img.jpg" alt="">
         </div>
+        
+        <div class="top-ad-banner">
+            <ins class="kakao_ad_area" style="display:none;" 
+                data-ad-unit    = "DAN-HE8zEaGCOFCiDlwR" 
+                data-ad-width   = "728" 
+                data-ad-height  = "90">
+            </ins> 
+        </div>
+
         <div>
             <div class="q1">
                 <p>
@@ -294,8 +303,15 @@
                 </input>
             </div>
         </div>
+
+        <div class="bottom-ad-banner">
+            <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-T6CcaYMQZIX9OpyF" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+        </div>
         <span class="jocoding">제작도움: <a class="red" href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg">조코딩 유튜브</a> </span>  
         <div class="submit"><button class="submit" onclick="onSubmitClick()">결과보기</button></div>
-
     </body>
 </html>
