ad banner position aligned

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="q1">
                 <p>
                     1. 주말 아침 11시에 일어났습니다.
-                    어떤 음식으로 아점을 먹으시겠습니까?
+                    어떤 음식으로 아점을 드시겠습니까?
                 </p>
                 <input type="checkbox" id="s1" name="q1" value="36" onclick='checkOnlyOne(this)'>
                 <label for="s1" >야채가 들어있는 샌드위치</label>
